apps/web/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: visign-web
  labels:
    app: visign-web
spec:
  selector:
    app: visign-web
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
